# optionality

./: .gitignore  README.md  main.py  pyproject.toml
examples/: holdings.yaml  strategy.yaml
src/optionality/apis/: __init__.py  aux.py  moomoo_api.py  yfinance_api.py
src/optionality/assets/: option_snapshot.yaml
src/optionality/datatype/: __init__.py  base.py  notification.py
src/optionality/notification/: __init__.py  file.py  gmail.py  html_maker.py
